Use padding to ensure search prompts with green check do not have covered up text

--- a/_sass/_dto.scss
+++ b/_sass/_dto.scss
@@ -2401,6 +2401,9 @@ html.no-scroll, body.no-scroll {
 }
 
 .input-group.ui.search.valid {
+  .prompt {
+    padding-right: 2em;
+  }
   &:after {
     content: '\f058';
     font-family: 'FontAwesome';
